--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,95 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+/* NavBar */
+header {
+  width: 100%;
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: center;
+  padding: 0.75rem 8rem;
+  box-shadow: 1px 1px 2px -1px rgba(0,0,0,0.75);
+}
+
+button {
+  font-size: 14px;
+  font-weight: 500;
+  background: none;
+  border: none;
+  border-radius: 1rem;
+  padding: 0.75rem 1rem;
+  margin-left: 0.5rem;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.18) 0px 1px 2px;
+  transition: all 0.2s;
+}
+
+button:focus,
+button:hover {
+  outline: none;
+  box-shadow: rgba(0, 0, 0, 0.18) 0px 1px 4px;
+}
+
+button:active {
+  box-shadow: rgba(0, 0, 0, 0.18) 1px -2px 4px;
+}
+
+.form-container {
+  margin: 1rem auto;
+  max-width: 500px;
+  padding: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.18) 0px 0px 8px;
+  border-radius: 10px;
+}
+
+.form-container form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-container form label {
+  font-size: 0.8rem;
+}
+
+.form-container form input, 
+.form-container form textarea, 
+.form-container form select {
+  margin-top: 0.25rem;
+  margin-bottom: 0.75rem;
+  padding: 0.25rem;
+  font-weight: bold;
+  border: none;
+  background: white;
+  box-shadow: rgba(0, 0, 0, 0.18) 0px 1px 2px;
+}
+
+.form-container form input:focus, 
+.form-container form textarea:focus, 
+.form-container form select:focus {
+  outline: none;
+  box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+}
+
+.form-container form input[type="submit"] {
+  width: 30%;
+  font-weight: 500;
+  background-color: var(--magenta);
+  padding: 0.5rem;
+  border-radius: 6px;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.1s;
+}
+
+.form-container form input[type="submit"]:focus,
+.form-container form input[type="submit"]:active {
+  outline: none;
+  transform: scale(0.95);
+}
+
+.smallform {
+  transition: display 2s;
+}
