cancel kind of working

--- a/src/index.css
+++ b/src/index.css
@@ -172,3 +172,12 @@ button:active {
   #white {
     display: block
   }
+
+  #waiting {
+    display: none
+  }
+
+  button:disabled {
+    background: #F5F5F5;
+    color : #C3C3C3;
+}
