--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,35 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+} */
+
+* {
+  margin: 0;
+  padding: 0;
 }
+
+a {
+  display: block;
+  color: #af1100;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  } 
+
+
+body,h1,h2,h3,input,hr {
+  font-family: "Raleway", Arial, sans-serif;
+  background-color: rgb(88, 88, 88);
+  align-items: center;
+  text-align: center;
+  /* font-family: "Avenir Next", Avenir, "Segoe UI", Roboto, "Helvetica Neue", sans-serif; */
+}
+
+h1 {letter-spacing: 6px}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -13,14 +37,23 @@ code {
 }
 
 
+
+
 /* NavBar */
 header {
   width: 100%;
+  height: 50px;
   display: flex;
   /* justify-content: space-between; */
   align-items: center;
-  padding: 0.75rem 8rem;
+  /* padding: 0.75rem 8rem; */
   box-shadow: 1px 1px 2px -1px rgba(0,0,0,0.75);
+  list-style-type: none;
+margin: 0;
+padding: 0;
+background-color: #333;
+color:  white;
+overflow:visible;
 }
 
 button {
@@ -34,16 +67,18 @@ button {
   cursor: pointer;
   box-shadow: rgba(0, 0, 0, 0.18) 0px 1px 2px;
   transition: all 0.2s;
+  color:  white
 }
 
 button:focus,
 button:hover {
   outline: none;
-  box-shadow: rgba(0, 0, 0, 0.18) 0px 1px 4px;
+  box-shadow: rgba(255, 255, 255, 0.18) 0px 1px 4px;
+  background-color: #111;
 }
 
 button:active {
-  box-shadow: rgba(0, 0, 0, 0.18) 1px -2px 4px;
+  box-shadow: rgba(255, 255, 255, 0.18) 1px -2px 4px;
 }
 
 .form-container {
@@ -71,7 +106,7 @@ button:active {
   padding: 0.25rem;
   font-weight: bold;
   border: none;
-  background: white;
+  background: rgb(97, 97, 97);
   box-shadow: rgba(0, 0, 0, 0.18) 0px 1px 2px;
 }
 
@@ -100,8 +135,13 @@ button:active {
   transform: scale(0.95);
 }
 
+
+
 .smallform {
-  transition: display 2s;
+  display: none;
+  position: relative;
+  top: 80px;
+  left: 600px
 }
 
 .board {
@@ -152,11 +192,11 @@ button:active {
   }
   
   input:checked + .slider {
-  background-color: #2196F3;
+  background-color: rgb(20, 20, 20);
   }
   
   input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px rgb(0, 0, 0);
   }
   
   input:checked + .slider:before {
@@ -182,6 +222,68 @@ button:active {
     color : #C3C3C3;
 }
 
-tr:nth-child(even) {
-  background-color: #f2f2f2
+tr{
+  height: 34px;
 }
+
+.name {
+  width: 300px;
+}
+.players {
+  width: 300px;
+}
+
+th{
+  background-color: #7a7a7a
+
+}
+
+tr:nth-child(odd) {
+  background-color: #696969
+}
+
+tr:hover {background-color: #7a7a7a;}
+
+#logo{
+  position: relative;
+  top: 20px;
+}
+
+.pagetitle{
+  position: relative;
+  left: 82px;
+  bottom: 10px
+}
+
+.pagetitle:hover{
+  text-shadow: 0px 0px 0px #FF0000;
+}
+
+#logo:hover {
+  transform: rotate(-10deg)
+}
+
+table {
+  margin-left:auto; 
+  margin-right:auto;
+}
+
+#loading{
+  color: #be1300;
+  font-family: "Raleway", Arial, sans-serif;
+  background-color: rgb(88, 88, 88);
+  align-items: center;
+  text-align: center;
+}
+
+
+  .rightalign {
+    position: relative;
+    left: 700px
+  }
+
+  /* .signup{
+    position: absolute;
+    left: 1100px;
+    bottom: 370px;
+  } */
